kubernetes/apps/filebrowser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: ctnr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:s6
          ports:
            - containerPort: 80
          volumeMounts:
            - name: filebrowser-config
              mountPath: /database
            - name: filebrowser-config
              mountPath: /config
            - name: nfs-data
              mountPath: /srv
      volumes:
        - name: filebrowser-config
          persistentVolumeClaim:
            claimName: filebrowser-config-pvc
        - name: nfs-data
          persistentVolumeClaim:
            claimName: nfs-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: ctnr
spec:
  selector:
    app: filebrowser
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
