kubernetes/apps/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: ctnr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: nfs-data
              mountPath: /data
            - name: in-memory-cache-pvc
              mountPath: /config/cache/transcodes
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: nfs-data
          persistentVolumeClaim:
            claimName: nfs-data-pvc
        - name: in-memory-cache-pvc
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: ctnr
spec:
  selector:
    app: jellyfin
  type: NodePort
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      protocol: TCP
