kubernetes/apps/qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: ctnr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
            - containerPort: 6881
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: nfs-data
              mountPath: /downloads
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: nfs-data
          persistentVolumeClaim:
            claimName: nfs-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: ctnr
spec:
  selector:
    app: qbittorrent
  type: NodePort
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: torrent-tcp
      port: 6881
      targetPort: 6881
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP

# kubectl -n ctnr exec deploy/qbittorrent -- sh -c 'rm -f /config/qBittorrent/lockfile /config/qBittorrent/ipc-socket && s6-svc -u /run/s6-rc/servicedirs/svc-qbittorrent'
