kubernetes/apps/webtop.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webtop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtop
  namespace: webtop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webtop
  template:
    metadata:
      labels:
        app: webtop
    spec:
      hostname: webtop
      containers:
        - name: webtop
          image: lscr.io/linuxserver/webtop:debian-xfce
          ports:
            - containerPort: 3001
              name: https
          volumeMounts:
            - name: config
              mountPath: /config
            - name: shm
              mountPath: /dev/shm
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 3000m
              memory: 16Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: webtop-config-pvc
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: webtop
  namespace: webtop
spec:
  selector:
    app: webtop
  type: NodePort
  ports:
    - name: https
      port: 3001
      targetPort: 3001
      protocol: TCP
